AC_INIT([StrategoXT],[0.9.2],[stratego-bugs@cs.uu.nl])
AM_INIT_AUTOMAKE

# set the prefix immediately to the default prefix
test "x$prefix" = xNONE && prefix=$ac_default_prefix

echo "** INFO -- Prefix is $prefix"

### ATerm Library #####################
AC_ARG_WITH(aterm, 
  AC_HELP_STRING([--with-aterm=DIR], [use ATerm Library at DIR @<:@PREFIX@:>@]),
  ATERM=$withval, 
  ATERM="$prefix"
)
AC_SUBST(ATERM)

### Choice Point Library #############
AC_ARG_WITH(cpl, 
  AC_HELP_STRING([--with-cpl=DIR], [use Choice Point Library at DIR (optional)]),
  CPL=$withval usecpl=true, 
  usecpl=false
)
AC_SUBST(CPL)
AM_CONDITIONAL(USECPL, test x$usecpl = xtrue)

### XTC #########################
AC_ARG_WITH(repository,
  AC_HELP_STRING([--with-repository=FILE], [use XTC repository at FILE @<:@PREFIX/share/StrategoXT/XTC@:>@]),
  REPOSITORY="$withval",
  REPOSITORY="$prefix/share/$PACKAGE_NAME/XTC"
)
AC_SUBST(REPOSITORY)

### SDF ###############################
AC_ARG_WITH(sdf, 
  AC_HELP_STRING([--with-sdf=SDF], [use SDF bundle at SDF @<:@PREFIX@:>@]),
  SDF="$withval", 
  SDF="$prefix"
)
AC_SUBST(SDF)
echo "** INFO -- Using SDF at $SDF"

AC_ARG_WITH(sglr, 
  AC_HELP_STRING([--with-sglr=DIR], [use SGLR bundle at DIR @<:@SDF@:>@]),
  SGLR="$withval", 
  SGLR="$SDF"
)
AC_SUBST(SGLR)
echo "** INFO -- Using SGLR at $SGLR"

AC_ARG_WITH(pgen, 
  AC_HELP_STRING([--with-pgen=DIR], [use SDF parser generator at DIR @<:@SDF@:>@]),
  PGEN="$withval", 
  PGEN="$SDF"
)
AC_SUBST(PGEN)

AC_ARG_WITH(latex, 
  AC_HELP_STRING([--with-latex=DIR], [use LaTeX distribution at DIR @<:@/usr@:>@]),
  LATEX="$withval", 
  LATEX="/usr"
)
AC_SUBST(LATEX)

AC_ARG_WITH(stratego-xt, 
  AC_HELP_STRING([--with-stratego-xt=DIR], [use StrategoXT at DIR (bootstrap only) @<:@PREFIX@:>@]),
  STRATEGOXT="$withval", 
  STRATEGOXT="$prefix"
)
AC_SUBST(STRATEGOXT)

### PROGRAMS ##########################

AC_CHECK_PROGS(RPMBUILD, rpmbuild rpm)
AC_SUBST(RPMBUILD)

AM_CONFIG_HEADER([config.h])

### PACKAGES ##########################

PKGS="autoxt srts xtc sdf-import sc ssl gpp c-tools stratego-front asfix-tools aterm-tools dot-tools graph-tools sdf-front sdf-tools stratego-tools boxenv stratego-util"
AC_SUBST(PKGS)

top_srcdir=`pwd`
BUILD_SRTS=${top_srcdir}/pre-pkgs/build
INSTALL_XTC=${top_srcdir}/pre-pkgs/install

### OUTPUT #############################

AC_OUTPUT(
	Makefile 
	README
  strategoxt.spec
)

### SUBPACKAGES ########################

AB_CONFIG_PKG(autoxt, )

if test x$usecpl = xtrue
then
AB_CONFIG_PKG(srts,
   --with-aterm=${ATERM}
   --with-cpl=${CPL}
)
else
AB_CONFIG_PKG(srts,
   --with-aterm=${ATERM}
)
fi

AB_CONFIG_PKG(xtc,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

# sdf-import registers the location of the installed SRTS,
# therefore we configure with this SRTS and not BUILD_SRTS

AB_CONFIG_PKG(sdf-import,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${prefix}  
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(sc,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(c-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-front,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(ssl,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(asfix-tools,
   --with-srts=${prefix}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(gpp,
   --with-srts=${prefix}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(aterm-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(graph-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(sdf-front,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(sdf-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(dot-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-tools,
   --with-aterm=${ATERM}
   --with-sglr=${SGLR}
   --with-pgen=${PGEN}
   --with-stratego-xt=${STRATEGOXT}
   --with-srts=${BUILD_SRTS}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(boxenv,
   --with-latex=${LATEX}
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)

AB_CONFIG_PKG(stratego-util,
   --with-xtc=${INSTALL_XTC}
   --with-repository=${REPOSITORY}
)